# Coffee-RollingForecast

./: .clangd  .gitignore  CMakeLists.txt  README.md  rf.nvim
include/: batch.hpp  farm.hpp  utils.hpp  variety.hpp
scripts/: build.sh
src/: CMakeLists.txt  main.cpp  utils.cpp
src/include/: batch.hpp  farm.hpp  maintenance.hpp  utils.hpp  variety.hpp
src/maintenance/: maintenance.cpp  pruning.cpp
src/objects/: batch.cpp  batch.hpp  farm.cpp  farm.hpp  variety.cpp  variety.hpp
tests/: CMakeLists.txt  objects_test.cpp  utils_test.cpp
